update project pages to include fonts and spacing fixes, translate essay images to own component for water essay

--- a/src/components/Project/project.module.scss
+++ b/src/components/Project/project.module.scss
@@ -3,9 +3,12 @@
 @import '../../styles/fonts.module.scss';
 
 .project {
-  padding: 80px 0 60px;
+  padding: 100px 16px;
+  @include md {
+    padding: 160px 128px;
+  }
   @include lg {
-    padding: 120px 90px 80px;
+    padding: 160px 150px;
   }
 }
 
@@ -14,30 +17,26 @@
   margin: 0;
   text-align: center;
   color: $white-primary;
-  @include medium-body;
+  margin-bottom: 16px;
+  @include medium-label;
   @include md {
-    @include big-body;
+    @include big-label;
   }
 }
 
 .author {
   padding: 0;
   margin: 0;
-  margin-bottom: 40px;
   text-align: center;
   color: $white-primary;
-  @include medium-body;
+  @include medium-label;
   @include md {
-    @include big-body;
-  }
-  @include lg {
-    margin-bottom: 130px;
+    @include big-label;
   }
 }
 
 .links {
   margin-top: 60px;
-  margin-bottom: 30px;
   text-align: center;
   @include small-body;
   @include md {
@@ -58,7 +57,11 @@
 .footer {
   display: flex;
   width: 100%;
-  margin-bottom: 80px;
+  margin-bottom: 160px;
+  padding: 0 16px;
+  @include md {
+    padding: 0 36px;
+  }
 }
 
 .button {
