--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -16,7 +16,6 @@
   height: 100%;
   width: 88px;
   font-size: 24px;
-  font-weight: 400;
   @include medium-label;
 
   @include md {
