--- a/src/styles/fonts.module.scss
+++ b/src/styles/fonts.module.scss
@@ -6,48 +6,56 @@ $regular: 'NON-Natural-Grotesk-Regular';
   font-family: $regular;
   font-size: 32px;
   line-height: 40px;
+  font-weight: 400;
 }
 
 @mixin small-logo {
   font-family: $regular;
   font-size: 28px;
   line-height: 40px;
+  font-weight: 400;
 }
 
 @mixin big-label {
   font-family: $regular;
-  font-size: 48px;
-  line-height: 60px;
+  font-size: 32px;
+  line-height: 56px;
+  font-weight: 400;
 }
 
 @mixin medium-label {
   font-family: $regular;
   font-size: 24px;
   line-height: 28px;
+  font-weight: 400;
 }
 
 @mixin small-label {
   font-family: $regular;
   font-size: 20px;
   line-height: 24px;
+  font-weight: 400;
 }
 
 @mixin big-body {
   font-family: $regular;
-  font-size: 48px;
-  line-height: 68px;
+  font-size: 32px;
+  line-height: 56px;
+  font-weight: 400;
 }
 
 @mixin medium-body {
   font-family: $regular;
   font-size: 24px;
   line-height: 36px;
+  font-weight: 400;
 }
 
 @mixin small-body {
   font-family: $regular;
   font-size: 20px;
   line-height: 28px;
+  font-weight: 400;
 }
 
 @font-face {
